Updating of user role and deleting of user
